[package]
name = "nyantec-cert-auth"
version = "0.1.0"
authors = ["The cert-auth Authors <oss@nyantec.com>"]
edition = "2021"
description = "A library for parsing X.509 Client Certificates"
repository = "https://github.com/nyantec/nyantec-cert-auth"
license = "MirOS"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
der-parser = "5.1"
hyper = { version = "0.14", features = [ "server", "http1", "tcp" ] }
rand = "0.8.4"
reqwest = { version = "0.11.9", features = [ "json" ] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
thiserror = "1.0.30"
tokio = { version = "1.5", features = [ "rt-multi-thread", "macros" ] }
urlencoding = "1.3"
x509-parser = "0.9"
